# messenger

./: CMakeLists.txt  main.cpp
Platform/: linux_platform.cpp  mac_platform.cpp  platform.h  windows_platform.cpp
core/: Task.h  TaskQueue.cpp  TaskQueue.h
